--- a/public/directives/flashCard/ManageCardForm.html
+++ b/public/directives/flashCard/ManageCardForm.html
@@ -1,4 +1,6 @@
 <edit-flash-card card="flashCard"></edit-flash-card>
-
+<div class="delete-btn">
+	<button ng-click="removeCard()">Delete</button>
+</div>
 
 
